app/assets/stylesheets/local/oral_history_splash.scss
.full-width-homepage {
    #masthead {
        margin-bottom: 0 !important;
    }

    #mainContainer {
        max-width: initial !important;
        padding-left: 0    !important;
        padding-right: 0   !important;
    }
    .container-fluid {
        padding-left: 0;
        padding-right: 0;
    }
}

.oral-history-collection-splash {
  .collection-desc {
    max-width: calc($max-readable-width + 6rem);
    padding: 2rem 4rem 1rem 4rem;
    margin: 0 auto;
  }

  .collection-splash-thumb {
    flex-grow: 1;
    flex-shrink: 1;
    min-width: 266px;

    background-image: asset-url("oral_history_collection_splash.jpg");
    background-size: cover;
  }

  .canned-queries-container {
    background-color: $brand-light-grey;
    padding-top: 2rem;

    .canned-queries {
      display: flex;
      flex-wrap: wrap;
      margin: 0 2rem 0 4rem;

      a.q {
        display: flex;
        align-items: center;
        background-color: white;
        border: 1px solid $brand-dark-grey;
        margin-right: 2rem;
        margin-bottom: 2rem;

        .number, .link {
          padding: 0 0.5rem;
        }

        .number {
          font-size: 1.75rem;
          background-color: $brand-dark-grey;
          color: white;
        }
      }
    }
  }

  .this-day {
    background-color: $brand-dark-grey;

    max-width: $main-container-max-width;
    margin: 0 auto;

    padding: 2rem 0;

    @include media-breakpoint-up('md') {
      padding-right: $grid-gutter-width;
      padding-left: $grid-gutter-width;
    }

    .this-day-body {
      padding-top: 2rem;
      display: inline-flex;
      flex-wrap: wrap;
      margin: 0 auto;

      .this-day-card {
        width: $standard-thumb-width;
        margin: 0 2.2rem 2.2rem 2.2rem;
      }
      .this-day-label {
        font-family: $brand-sans-serif;
        font-weight: $semi-bold-weight;
        text-transform: uppercase;
        font-size: 0.875rem;  // 14px for 16px=1rem
        line-height: normal;
        letter-spacing: $small-caps-letter-spacing;
        background-color: white;
        padding: 1em 1em;
        border: 1px solid $brand-dark-grey;
        border-top: none;
        margin-bottom: 0;
      }
      .this-day-text-desc {
        @extend .text-muted;
        padding: 1em 1em;
        background-color: white;
        border: 1px solid $brand-dark-grey;
      }
    }
  }

  .projects {
    max-width: calc(235px + 2rem + #{$max-readable-width});
    margin: 0 auto;

    padding: 2rem 0;

    @include media-breakpoint-up('md') {
      padding-right: $grid-gutter-width;
      padding-left: $grid-gutter-width;
    }


    .project {
      display: flex;
      margin-top: 2rem;
      margin-bottom: 1rem;

      .project-thumb {
        width: 235px;
        margin-right: 1rem;
        position: relative;
        img {
          max-width: 100%;
        }
        .count {
          font-size: 120%;
          position: absolute;
          top: 0.5rem;
          left: 0.5rem;

          background-color: $brand-dark-grey;
          color: white;

          border-radius: 3em;
          padding: 0 0.5em;
        }
      }
      .text {
        flex-grow: 1
      }
    }

    .more-projects {
      @include font-size($h3-font-size);
    }
  }
}

